welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:43: error: not found: value DIrection
  if(getDirection==DIrection.EST){
                   ^SnakeBuggle:53: error: not found: value NORD
  if(getDirection()==NORD){
                     ^SnakeBuggle:55: error: not found: value righ
      righ()
      ^